@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2024 The mzmine Development Team
+ * Copyright (c) 2004-2025 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -62,6 +62,8 @@ import io.github.mzmine.datamodel.identities.iontype.IonIdentity;
 import io.github.mzmine.datamodel.identities.iontype.IonType;
 import io.github.mzmine.datamodel.impl.SimpleDataPoint;
 import io.github.mzmine.datamodel.msms.DDAMsMsInfo;
+import io.github.mzmine.gui.preferences.NumberFormats;
+import io.github.mzmine.main.ConfigService;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.util.annotations.CompoundAnnotationUtils;
 import io.github.mzmine.util.scans.ScanUtils;
@@ -170,7 +172,63 @@ public class FeatureUtils {
     return buf.toString();
   }
 
+
   /**
+   * @return a description and example for a stable feature ID
+   */
+  public static @NotNull String rowToFullIdDescription() {
+    return """
+        full row ID is defined by row ID, mz, retention time, ion mobility (if applicable), like:
+        %s""".formatted(rowToFullId(1, 195.0085, 5.45f, 1.5f));
+  }
+
+  /**
+   * A stable ID for a row that incorporates the id, mz, rt, mobility if available and applies a
+   * stable fixed format to each.
+   *
+   * @return a full row ID
+   */
+  public static @NotNull String rowToFullId(FeatureListRow row) {
+    final Integer id = row.getID();
+    final Float rt = row.getAverageRT();
+    final Float mob = row.getAverageMobility();
+    final Double mz = row.getAverageMZ();
+    return rowToFullId(id, mz, rt, mob);
+  }
+
+  /**
+   * A stable ID for a row that incorporates the id, mz, rt, mobility if available and applies a
+   * stable fixed format to each.
+   *
+   * @return a full row ID
+   */
+  private static @NotNull String rowToFullId(int id, @Nullable Double mz, @Nullable Float rt,
+      @Nullable Float mob) {
+    // use stable formats so that ID is stable across versions
+    final NumberFormats formats = ConfigService.getConfiguration().getPreferences()
+        .getStableFormats();
+    final StringBuilder b = new StringBuilder();
+    b.append("row").append(id);
+    if (mz != null) {
+      b.append("_mz").append(formats.mz(mz));
+    }
+    if (rt != null) {
+      b.append("_rt").append(formats.rt(rt));
+    }
+    if (mob != null) {
+      b.append("_mob").append(formats.mobility(mob));
+    }
+    // bad to end with number because row1 also matches row11 by substring but row1_id is unique
+    b.append("_id");
+    return b.toString();
+  }
+
+  /**
+   * Check all {@link FeatureAnnotation} on both rows if they have the same name or same smiles /
+   * inchi/ inchikey
+   * <p>
+   * Previous behavior was:
+   * <p>
    * Compares identities of two feature list rows. 1) if preferred identities are available, they
    * must be same 2) if no identities are available on both rows, return true 3) otherwise all
    * identities on both rows must be same
@@ -183,6 +241,44 @@ public class FeatureUtils {
       return false;
     }
 
+    final List<FeatureAnnotation> matches1 = CompoundAnnotationUtils.streamFeatureAnnotations(row1)
+        .toList();
+    final List<FeatureAnnotation> matches2 = CompoundAnnotationUtils.streamFeatureAnnotations(row2)
+        .toList();
+
+    if (matches1.isEmpty() && matches2.isEmpty()) {
+      // no annotations available is still true
+      return true;
+    }
+
+    for (FeatureAnnotation match1 : matches1) {
+      // do not use formula or bestNameIdentifier as this contains the formula
+      // this does not fully qualify an ID and isomers usually elute close enough
+      final String name = match1.getCompoundName();
+      final String iupac = match1.getIupacName();
+      final String internalId = match1.getInternalId();
+      final String smiles = match1.getSmiles();
+      final String inChI = match1.getInChI();
+      final String inChIKey = match1.getInChIKey();
+      if (StringUtils.allBlank(name, iupac, internalId, smiles, inChI, inChIKey)) {
+        continue;
+      }
+
+      // if any of the matches metadata matches then return true
+      for (FeatureAnnotation match2 : matches2) {
+        if (StringUtils.equalContentIgnoreCase(name, match2.getCompoundName()) || //
+            StringUtils.equalContentIgnoreCase(iupac, match2.getIupacName()) || //
+            StringUtils.equalContent(smiles, match2.getSmiles()) || //
+            StringUtils.equalContent(inChI, match2.getInChI()) || //
+            StringUtils.equalContent(inChIKey, match2.getInChIKey()) || //
+            StringUtils.equalContent(internalId, match2.getInternalId()) //
+        ) {
+          return true;
+        }
+      }
+    }
+
+    // TODO remove old identity based matches
     // If both have preferred identity available, then compare only those
     FeatureIdentity row1PreferredIdentity = row1.getPreferredFeatureIdentity();
     FeatureIdentity row2PreferredIdentity = row2.getPreferredFeatureIdentity();
@@ -495,8 +591,7 @@ public class FeatureUtils {
   /**
    * Loops over all {@link DataType}s in a {@link FeatureListRow}. Extracts all annotations derived
    * from a {@link CompoundDBAnnotation} in all {@link AnnotationType}s derived from the
-   * {@link ListWithSubsType} within the {@link FeatureListRow}'s
-   * {@link io.github.mzmine.datamodel.features.ModularDataModel}.
+   * {@link ListWithSubsType} within the {@link FeatureListRow}'s {@link ModularDataModel}.
    *
    * @param selectedRow The row
    * @return List of all annotations.
@@ -518,9 +613,10 @@ public class FeatureUtils {
     return compoundAnnotations;
   }
 
-  public static boolean isImsFeature(Feature f) {
-    return f.getRawDataFile() instanceof IMSRawDataFile
-           && f.getFeatureData() instanceof IonMobilogramTimeSeries;
+  public static boolean isImsFeature(@Nullable Feature f) {
+
+    return f != null && f.getRawDataFile() instanceof IMSRawDataFile
+        && f.getFeatureData() instanceof IonMobilogramTimeSeries;
   }
 
   /**
@@ -768,7 +864,6 @@ public class FeatureUtils {
   }
 
   public static List<IonType> extractAllIonTypes(FeatureListRow row) {
-
     final List<IonType> allIonTypes = Arrays.stream(FeatureAnnotationPriority.values())
         .flatMap(type -> {
           final Object o = row.get(type.getAnnotationType());
@@ -776,13 +871,20 @@ public class FeatureUtils {
             return Stream.empty();
           }
           return switch (type) {
-            case MANUAL, FORMULA, LIPID -> Stream.empty();
+            case MANUAL, LIPID, FORMULA -> Stream.empty();
             case SPECTRAL_LIBRARY, EXACT_COMPOUND -> {
               List<FeatureAnnotation> featureAnnotations = (List<FeatureAnnotation>) annotations;
               yield featureAnnotations.stream().map(FeatureAnnotation::getAdductType);
             }
           };
-        }).toList();
+        }).filter(Objects::nonNull).collect(Collectors.toList());
+
+    if (row.getBestIonIdentity() != null) {
+      final IonType ionType = row.getBestIonIdentity().getIonType();
+      final List<IonType> combined = new ArrayList<>(allIonTypes);
+      combined.add(ionType);
+      return combined;
+    }
 
     return allIonTypes;
   }
@@ -847,6 +949,14 @@ public class FeatureUtils {
     }
     return Optional.empty();
   }
+
+  /**
+   * Checks if this feature has MRM data (and is not null).
+   */
+  public static boolean isMrm(@Nullable Feature f) {
+    return f instanceof ModularFeature mf && mf.isMrm();
+  }
+
 
   public static String rowsToIdString(List<? extends FeatureListRow> rows) {
     return rows.stream().map(FeatureListRow::getID).map(Object::toString)
